# unstuck-backend

./: .gitignore  CLIENT_IMPLEMENTATION.md  README_FASTAPI.md  VOICE_CHAT_API.md  VOICE_CHAT_IMPLEMENTATION.md  __init__.py  alembic.ini  api.md  main.py  pyproject.toml  readme.md  test_perplexity.py  test_setup.py
api/: __init__.py  app.py
api/routes/: auth.py  gaming_builds.py  gaming_chat.py  gaming_guides.py  gaming_lore.py  gaming_search.py  health.py  subscription.py  voice_chat.py
clients/: __init__.py  openai_client.py  perplexity_client.py
core/: __init__.py  auth.py  config.py  constants.py  exceptions.py  rate_limit.py  subscription.py
database/: __init__.py  connection.py  models.py  service.py
examples/: VOICE_CHAT_IMPLEMENTATION.md  VOICE_CHAT_README.md  voice_chat_client_example.js
migrations/: env.py
migrations/versions/: 289fa352ebc0_add_conversation_type_field.py  72c8f88c437d_add_subscription_fields.py  a8f3d9e2b1c5_add_request_tracking_fields.py  b0d61f95e068_add_voice_chat_request_tracking_fields.py  f82c79f71014_initial_tables_users_conversations_.py  fc948a41131f_remove_voice_chat_fields.py
schemas/: __init__.py  auth.py  common.py  gaming_builds.py  gaming_chat.py  gaming_guides.py  gaming_lore.py  gaming_search.py  subscription.py  voice_chat.py
services/: __init__.py  gaming_builds_service.py  gaming_chat_service.py  gaming_guides_service.py  gaming_lore_service.py  gaming_search_service.py  subscription_service.py  voice_chat_service.py
utils/: __init__.py  exceptions.py  text_processing.py
