[project]
name = "Unstuck"
version = "0.1.0"
description = "Gaming Chat Engine"
authors = [
    {name = "florian-lup",email = "contact@florianup.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "perplexityai (>=0.10.0,<0.11.0)",
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn[standard] (>=0.31.0,<0.32.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.25,<3.0.0)",
    "asyncpg (>=0.29.0,<1.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "stripe (>=11.3.0,<12.0.0)",
    "openai (>=1.59.8,<2.0.0)",
    "websockets (>=13.1,<14.0.0)"
]


[tool.poetry]
packages = [
    {include = "api"},
    {include = "clients"},
    {include = "core"},
    {include = "schemas"},
    {include = "services"},
    {include = "utils"},
    {include = "database"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.1"
mypy = "^1.18.2"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11+
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "C4", "PIE", "SIM", "RET"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["perplexity.*", "pydantic_settings.*", "jose.*", "fastapi.*", "uvicorn.*", "sqlalchemy.*", "asyncpg.*", "alembic.*", "stripe.*"]
ignore_missing_imports = true

